compilateurDeca/src/test/deca/codegen/valid/sans_objet/factorial.deca
// Description:
//    Factorielle en boucle
//
// Resultats:
//    3628800
{
    int n = 10;
    int f = 1;

    while (n > 1) {
        f = f * n;
        n = n - 1;
    }
    println(f);
}
