compilateurDeca/src/test/deca/codegen/invalid/sans_objet/diz_zero_const.deca
// Description:
//    Runtime error: division par zero via expression constante 
//
// Resultats:
//    Erreur d'execution
{
    println(10 / (1 - 1));
}
